[package]
name = "pwnenv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
dir = "0.1.2"
fs_extra = "1.3.0"
indexmap = "2.7.0"
nix = { version = "0.29.0", features = ["term", "fs", "process"] }
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
